--- a/genstar.gamaplugin.parent/pom.xml
+++ b/genstar.gamaplugin.parent/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.genstar</groupId>
-	<artifactId>genstar.parent</artifactId>
+	<artifactId>genstar.gamaplugin.parent</artifactId>
 	<version>1.0.3</version>
 	<packaging>pom</packaging>
 	<repositories>
