--- a/genstar.gamaplugin/pom.xml
+++ b/genstar.gamaplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.genstar</groupId>
   <artifactId>genstar.gamaplugin</artifactId>
-  <packaging>eclipse-feature</packaging>
+  <packaging>eclipse-plugin</packaging>
   <parent>
     <groupId>org.genstar</groupId>
     <artifactId>genstar.gamaplugin.parent</artifactId>
