--- a/genstar.gamaplugin.feature/pom.xml
+++ b/genstar.gamaplugin.feature/pom.xml
@@ -6,8 +6,8 @@
   <parent>
     <groupId>org.genstar</groupId>
     <artifactId>genstar.gamaplugin.parent</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.3-SNAPSHOT</version>
     <relativePath>../genstar.gamaplugin.parent/</relativePath>
   </parent>
-  <version>1.0.3</version>
+  <version>1.0.3-SNAPSHOT</version>
 </project>
