--- a/genstar.gamaplugin.p2updatesite/pom.xml
+++ b/genstar.gamaplugin.p2updatesite/pom.xml
@@ -15,7 +15,6 @@
 	<packaging>eclipse-repository</packaging>
 
 
-	<!-- 
 	<distributionManagement>
 		<repository>
 			<uniqueVersion>false</uniqueVersion>
@@ -29,35 +28,16 @@
 		</snapshotRepository>
 	</distributionManagement>
 
-	 -->
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>p2Repo</id>
-			<url>file://${project.build.directory}/p2Repo</url>
-		</repository>
-		<snapshotRepository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>p2Repo</id>
-			<url>file://${project.build.directory}/p2Repo</url>
-		</snapshotRepository>
-	</distributionManagement>
-	 
 
 	<profiles>
 		<!-- This profile is used to upload the repo -->
 		<profile>
 			<id>p2Repo</id>
 			<properties>
-				<!-- 
-				Properties relative to the distant host where to upload the repo 
+				<!-- Properties relative to the distant host where to upload the repo -->
 				<ftp.url>scp://51.255.46.42</ftp.url>
 				<ftp.toDir>./var/www/gama_updates/experimental/oxygen</ftp.toDir>
-				-->
-				<!-- Relative path to the repo being uploaded 
-				-->				
-				<ftp.url>file://${project.build.directory}</ftp.url>
-				<ftp.toDir>p2Repo</ftp.toDir>
+				<!-- Relative path to the repo being uploaded -->
 				<repo.path>${project.build.directory}/repository/</repo.path>
 			</properties>
 
