--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,18 @@ notifications:
 cache:
   directories:
   - "$HOME/.m2"
+addons:
+    apt:
+        packages:      
+            - sshpass
+            - oracle-java8-installer
+    ssh_known_hosts:
+      - 141.115.24.12
 before_install:
   - rm ~/.m2/settings.xml
 script: bash ./build.sh
 after_success: 
-    - export SSHPASS=$USER_PWD 
+    - export SSHPASS=$PASSWORD 
     - sh ./publish.sh
 branches:
   only:
