--- a/genstar.gamaplugin.p2updatesite/pom.xml
+++ b/genstar.gamaplugin.p2updatesite/pom.xml
@@ -19,12 +19,12 @@
 		<repository>
 			<uniqueVersion>false</uniqueVersion>
 			<id>p2Repo</id>
-			<url>scp://51.255.46.42/./var/www/gama_updates/experimental/oxygen</url>
+			<url>scp://141.115.24.12/./usr/local/WWW2/genstar/p2updatesite</url>
 		</repository>
 		<snapshotRepository>
 			<uniqueVersion>false</uniqueVersion>
 			<id>p2Repo</id>
-			<url>scp://51.255.46.42/./var/www/gama_updates/experimental/oxygen</url>
+			<url>scp://141.115.24.12/./usr/local/WWW2/genstar/p2updatesite</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -35,8 +35,8 @@
 			<id>p2Repo</id>
 			<properties>
 				<!-- Properties relative to the distant host where to upload the repo -->
-				<ftp.url>scp://51.255.46.42</ftp.url>
-				<ftp.toDir>./var/www/gama_updates/experimental/oxygen</ftp.toDir>
+				<ftp.url>scp://141.115.24.12</ftp.url>
+				<ftp.toDir>/usr/local/WWW2/genstar/p2updatesite</ftp.toDir>
 				<!-- Relative path to the repo being uploaded -->
 				<repo.path>${project.build.directory}/repository/</repo.path>
 			</properties>
