--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ addons:
             - oracle-java8-installer
     ssh_known_hosts:
       - 141.115.24.12
-      - ftpintra.irit.fr
 before_install:
   - rm ~/.m2/settings.xml
 script: bash ./build.sh
 after_success: 
+    - echo -e "Host *\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
     - export SSHPASS=$PASSWORD 
     - sh ./publish.sh
 branches:
